# ladspa

./: .gitignore  CMakeLists.txt  README.md
src/: lt_splitfreq.c  lt_splitfreq_dyn.c
